--- a/voteforjeju/jeju2020/templates/jeju2020/home.html
+++ b/voteforjeju/jeju2020/templates/jeju2020/home.html
@@ -7,8 +7,10 @@
 
     </head>
     <body>
-        2020 제주 총선<br>
+
         {% block content %}
+        <div class="home-voteforjeju">Vote for JEJU</div>
+        <br>
         <a href="{% url 'gab'%}">제주갑</a><br>
         <a href="{% url 'eul'%}">제주을</a><br>
         <a href="{% url 'byeong'%}">제주병</a>
