--- a/voteforjeju/jeju2020/templates/jeju2020/home.html
+++ b/voteforjeju/jeju2020/templates/jeju2020/home.html
@@ -14,6 +14,8 @@
         <a href="{% url 'gab'%}">제주갑</a><br>
         <a href="{% url 'eul'%}">제주을</a><br>
         <a href="{% url 'byeong'%}">제주병</a>
+        <br><br>
+        <a href="{% url 'birye' %}">비례대표</a>
         {% endblock %}
     </body>
 
