--- a/voteforjeju/jeju2020/templates/jeju2020/base.html
+++ b/voteforjeju/jeju2020/templates/jeju2020/base.html
@@ -4,9 +4,44 @@
     <head>
         <link type="text/css" rel="stylesheet" href="{% static 'jeju2020/css/style.css' %}" >
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </head>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#" style="color:white; font-weight:bold; font-size: 1.5rem;">VoteForJeju2020</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  지역구 선거
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="{% url 'gab' %}">제주시갑</a>
+                  <a class="dropdown-item" href="{% url 'eul' %}">제주시을</a>
+                  <a class="dropdown-item" href="{% url 'byeong'%}">서귀포시</a>
+                </div>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'birye' %}">비례대표 선거</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">20대 국회 성적표</a>
+            </li>
+            
+          </ul>
+        </div>
+      </nav>
     <body>
+
+          
+          
     {% block content %}
     {% endblock %}    
 
